Look for ``.po`` files in any ``LC_MESSAGES`` directory.
This simplifies the code.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,12 +4,13 @@ Changelog
 1.1 (unreleased)
 ----------------
 
-- Look for ``.po`` files in any directory that has 'locale' in its name.
-  No longer not restrict ``.po`` file search to directories explicitly
-  named ``locales`` or ``locale``, as they could also have names like
-  ``plonelocales`` or ``locales_for_version_2_only``.  Note that in
-  Plone ``.po`` files can also be in an i18n directory, but those
-  should not be compiled.
+- Look for ``.po`` files in any ``LC_MESSAGES`` directory.  It no
+  longer matters if this is contained in a language directory within a
+  ``locales`` or ``locale`` directory, as they could also have names
+  like ``plonelocales`` or ``locales_for_version_2_only``.  Note that
+  in Plone ``.po`` files can also be in an i18n directory, but those
+  should not be compiled; this does not have a ``LC_MESSAGES``
+  directory, so we automatically skip it.
   [maurits]
 
 
