--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog
 1.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Fixed the example MANIFEST.in.
+  [maurits]
 
 
 1.2 (2011-12-16)
